--- a/styles/default.css
+++ b/styles/default.css
@@ -11,7 +11,7 @@
 }
 
 .main-box{
-    padding: 15px;
+    padding: 25px;
     width: 50vw;
     text-align: center;
     justify-content: center;
@@ -24,5 +24,22 @@
     top: 0;
     left: 0;
     color: white;
-    background-color: red;
+    border: lightgray 2px solid;
+    margin-top: 7px;
+    margin-left: 7px;
+    cursor: pointer;
+    transition: all ease 0.1s;
+} .back-to-main-menu-h2{
+    transition: all ease 0.1s; 
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    font-size: 1em;
+}
+
+.back-to-main-menu:hover, .back-to-main-menu-h2:hover{
+    background-color: #fff;
+    color: black;
+    font-size: 1.3em;
 }
